--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,7 @@
 * {
+    box-sizing: border-box;
+    font-family: 'Kumbh Sans', sans-serif;
+    scroll-behavior: smooth;
     margin: 0;
     padding: 0;
     border: 0;
